--- a/style.css
+++ b/style.css
@@ -261,6 +261,11 @@ table {
 
 }
 
+::selection {
+  background: #ff9ef4; /* Change this to your desired highlight color */
+  color: #000000; /* Change this to your desired text color when highlighted */
+}
+
 
 /* Hover matches nav behavior */
 .prototype-button:hover {
@@ -299,6 +304,24 @@ video.border {
 
 
 .secondary-text {
+  color: #969696;
+}
+
+
+.secondary-text a {
+  text-decoration: underline;
+  text-decoration-style: dotted;
+   text-decoration-color: #37ABFF; 
+   text-underline-offset: 5px
+}
+
+
+.secondary-text a:hover {
+  color: #37ABFF;
+  text-decoration: underline;
+}
+
+.secondary-text a:visited {
   color: #969696;
 }
 
@@ -1222,8 +1245,12 @@ a.gallery-anchor {
 }
 
 .secondary-text a {
-  color: #37ABFF;
+  text-decoration: underline;
+  text-decoration-style: dotted;
+   text-decoration-color: #37ABFF; 
+   text-underline-offset: 5px
 }
+
 
 .secondary-text a:hover {
   color: #37ABFF;
@@ -1231,7 +1258,7 @@ a.gallery-anchor {
 }
 
 .secondary-text a:visited {
-  color: #37ABFF;
+  color: #969696;
 }
 
 hr {
