--- a/style.css
+++ b/style.css
@@ -119,7 +119,6 @@ table {
       color: #969696;
       text-decoration: none;
     
-      /* letter-spacing:   -1px; */
     }
 
     a:visited {
@@ -128,7 +127,6 @@ table {
 
     a:hover {
       color: #37ABFF;
-      /* text-decoration: underline; */
       text-decoration-color: #FF51CC;
       letter-spacing:  normal;
     }
@@ -140,6 +138,7 @@ table {
     a.message:link {
       color: #B9E2FF;
     }
+
 
 
     @font-face {
@@ -280,14 +279,14 @@ table {
 }
 
 
-  h4 a:link, h4 a:visited {
+  /* h4 a:link, h4 a:visited {
     color: #37ABFF;
   }
 
   h4 a:hover {
     text-decoration: underline;
     text-decoration-color: #37ABFF;
-  }
+  } */
 
   a {
     display: inline;
@@ -326,6 +325,24 @@ video.border {
 
 
 .secondary-text a:visited, .primary-text a:visited {
+  color: #969696;
+}
+
+a.link-dotted {
+  text-decoration: underline;
+  text-decoration-style: dotted;
+  text-decoration-color: #37ABFF;
+  text-underline-offset: 5px;
+  color: #969696;
+}
+
+a.link-dotted:hover,
+a.link-dotted:focus {
+  color: #37ABFF !important;
+  text-decoration-style: solid;
+}
+
+a.link-dotted:visited {
   color: #969696;
 }
 
@@ -559,11 +576,23 @@ a.gallery-anchor:hover {
 }
 
 img.project {
-  width: 100%;
+  max-width: 100%;
   height: auto;
   display: block;
   border-radius: 5px;
+  margin: auto;
 }
+
+img.topper {
+  width: 100%;
+  max-width: 1200px;
+  display: block;
+  height: auto;
+  margin: auto;
+  border-radius: 5px;
+  padding: 1rem 0;
+}
+
 
 img.project-half {
   width: 50%;
@@ -593,11 +622,11 @@ img.emote {
   margin: auto;
 }
 div.image-gallery {
-  max-width: 100%;
+  max-width: 1000px;
 }
 
 div.image-gallery-border {
-  max-width: 100%;
+  max-width: 1000px;
   border-width: 2px;
   border-style: solid;
   border-color:#F0F0F0;
@@ -1117,8 +1146,7 @@ a.gallery-anchor {
 
 /* IMAGE ADJUSTMENTS */
     img.project {
-      max-width: 100%;
-      max-height: 100%;
+      max-width: 100px;
       height: auto;
       display: block;
       margin: 0 auto;
@@ -1254,6 +1282,13 @@ a.gallery-anchor {
    text-decoration-color: #37ABFF; 
    text-underline-offset: 5px
 }
+
+/* .h4 a {
+  text-decoration: underline;
+  text-decoration-style: dotted;
+   text-decoration-color: #37ABFF; 
+   text-underline-offset: 5px
+} */
 
 
 .primary-text a:hover {
