--- a/style.css
+++ b/style.css
@@ -918,8 +918,8 @@ a.gallery-anchor {
   }
 
     h3 {
-    font-family: "ppmori-regular", sans-serif;
-    font-weight: 400;
+    font-family: "ppmori-medium", sans-serif;
+    font-weight: 500;
     font-size: 20px;
     font-style: normal;
     color: #363636;
